# respeaker-rs

./: .gitignore  Cargo.toml  LICENSE  default.nix
crates/respeaker/: Cargo.toml
crates/respeaker/src/: csv.rs  main.rs  params.rs  recorder.rs  respeaker_device.rs  ui.rs  usb.rs
testbed/: default.nix
