[workspace]
resolver = "2"
members = [
    "crates/respeaker",
]

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
# console-subscriber = "0.4.0"
eyre = "0.6"
color-eyre = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = "0.27"
strum_macros = "0.27"
clap = { version = "4.5", features = ["derive"] }
enum-map = "2.7.3"
rusb = "0.9.4"
tabled = "0.18.0"
rstest = "0.25"

[workspace.lints.clippy]
enum_glob_use = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
todo = "warn"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true
