[package]
name = "respeaker"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
eyre = { workspace = true }
color-eyre = { workspace = true }
clap = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
enum-map = { workspace = true }
rusb = { workspace = true }
tabled = { workspace = true }

[lints]
workspace = true
