[package]
name = "respeaker"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
eyre = { workspace = true }
color-eyre = { workspace = true }
clap = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
enum-map = { workspace = true }
rusb = { workspace = true }
tabled = { workspace = true }
eframe = "0.31.1"
cpal = "0.15.3"
hound = "3.5.1"
csv = "1.3.1"

[lints]
workspace = true
